# create_input_echamfesom

./: MANIFEST.in  Makefile  README.md  create_fake_flxatmos.sh  create_fake_sstocean.sh  create_input_echamfesom.ksh  fill_prepare.ksh  jan_surf_from_restart.ksh  jsbach_init_file.ksh  modify_cosmos_input_tarfiles.ksh  pool_data_versions.txt  setup.cfg
awiesm_bc.egg-info/: PKG-INFO  SOURCES.txt
docs/: Makefile  README.md  conf.py  index.rst  make.bat
scripts/: generate_pool_files.ksh  pool_data_versioning.ksh  prepare_restart_files.ksh
src/awiesm_bc/: __init__.py  cli.py  config.py  fortran_progs.py
src/awiesm_bc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ksh/: cosmos-tarfiles.ksh  fill_vegmax.ksh  jsbach_init_file.ksh
