
[metadata]
name = awiesm_bc
version = attr: src.awiesm_bc.__version__
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = GPL v2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    cdo
    click
    crayons
    everett[yaml]
    loguru

[options.entry_points]
console_scripts =
  awiesm_bc = awiesm_bc.cli:main

[options.packages.find]
where=src

[options.package_data]
awiesm_bc.fortran  =
    ../fortran/*
